tests/unit/compile/cases/syntax-errors/10.html-tag-broken.t
foo <div <br/> bar
---- THROW% ----
Unexpected <LT "<">; expected: <GT>, <SLASH> near `<br/> bar` in `%s` at line 1
